@@ -85,6 +85,131 @@ Example:
 
        shell> python unittests.py --with-mysql=/usr/local/mysql --with-mysql-capi=/usr/local/mysql --with-protobuf-include-dir=/usr/local/protobuf/include --with-protobuf-lib-dir=/usr/local/protobuf/lib --with-protoc=/usr/local/protobuf/bin/protoc
 
+The tests can be configured to be launched using an external server or bootstrapping it. The former is preferred (we'll assume so moving forward).
+
+As you can see, there are several parameters that can be injected into the ``unittests`` module. The parameters shown above are optional, or a must if you want to run the tests with the *C extension* enabled for the ``mysql.connector`` and ``mysqlx`` modules.
+
+The ``with-mysql-capi`` flag is needed to build the `C extension` of ``mysql.connector``, the remaining ones are needed to build it for ``mysqlx``.
+
+Additionally, there are parameters or flags that can be provided to set values to be used when connecting to the server:
+
+* **user**: the value stored by the environment variable ``MYSQL_USER`` is used (if set), otherwise, ``root`` is used by default.
+* **password**: the value of ``MYSQL_PASSWORD`` is used (if set), otherwise, ``empty_string`` is used by default.
+* **port**: the value of ``MYSQL_PORT`` is used (if set), otherwise, ``3306`` is used by default.
+* **mysqlx-port**: the value of ``MYSQLX_PORT`` is used (if set), otherwise, ``33060`` is used by default.
+* **host**: the value of ``MYSQL_HOST`` is used (if set), otherwise, ``127.0.0.1`` (localhost) is used by default.
+
+The previous defaults conform to the standard or default configuration implemented by the MySQL server. Actually, there are many more flags available, you can explore them via ``python unittests.py --help``.
+
+There are two core flags you can use to control the unit tests selection:
+
+1. **-t** which is a shortcut for **--test**. This command executes one test module provided the module name::
+
+    $ python unittests.py --use-external-server --verbosity 2 --password=$MYPASS -t cext_cursor
+
+2. **-T** which is a shortcut for **--one-test**. This command executes a particular test following a finer-grained syntax such as ``<module>[.<class>[.<method>]]``::
+
+    $ python unittests.py --use-external-server --verbosity 2 --password=$MYPASS -T tests.test_bugs.BugOra16660356
+    $ python unittests.py --use-external-server --verbosity 2 --password=$MYPASS -T tests.test_bugs.BugOra17041240.test_cursor_new
+
+If you do not provide any flag regarding *control of the unit tests selection*, all available test modules will be run. Some of the available test modules are:
+
+- abstracts
+- authentication
+- bugs
+- cext_api
+- cext_cursor
+- connection
+- constants
+- conversion
+- cursor
+- errors
+- mysql_datatypes
+- mysqlx_connection
+- mysqlx_crud
+- mysqlx_errorcode
+- mysqlx_pooling
+- network
+- optionfiles
+- pooling
+- protocol
+- qa_bug16217743
+- qa_caching_sha2_password
+- qa_mysqlx_crud_view
+- qa_mysqlx_session_reset
+- qa_mysqlx_table_column_metadata
+- utils
+
+The list is not complete, but you can deduce and find more module names by inspecting the **tests** folder and its subfolders.
+
+Running Tests using a Docker Container
+--------------------------------------
+
+For **Linux** and **macOS** users, there is a script that builds and runs a Docker container which then executes the test suite (*the C extension is built and enabled only if explicitly instructed*). This means no external dependency, apart from a running MySQL server, is needed.
+
+The script uses the environment variables described previously and introduces a few new ones. These are mostly meant to be used for configuring the Docker container itself. They allow to specify the path to a *Oracle Linux* engine image, the network proxy setup, the URL of the PyPI repository to use and whether you want the **C-EXT** enabled or not.
+
+* ``BASE_IMAGE`` (**container-registry.oracle.com/os/oraclelinux:9-slim** by default)
+* ``HTTP_PROXY`` (value of the environment variable in the host by default)
+* ``HTTPS_PROXY`` (value of the environment variable in the host by default)
+* ``NO_PROXY`` (value of the environment variable in the host by default)
+* ``PYPI_REPOSITORY`` (https://pypi.org/pypi by default)
+* ``MYSQL_CEXT`` (used to control the building of the **connector.mysql** C-EXT. If set to ``true`` or ``yes``, the extension is built, otherwise it is not)
+* ``MYSQLX_CEXT`` (same usage as ``MYSQL_CEXT``, but for the **mysqlx** package)
+* ``MYSQL_SOCKET`` (described below)
+
+There is one additional environment variable called ``TEST_PATTERN`` which can be used to provide a string or a regular expression that is applied for filtering one or more matching unit tests to execute.
+
+For instance, if you want to run the test module named *cursor* you'd be using::
+
+    $ TEST_PATTERN='cursor' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+Similarly, if you want to run all tests including the pattern *con* you'd be issuing::
+
+    $ TEST_PATTERN='.*con.*' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+If you want to run **connector.mysql** tests related to the C-EXT functionality you could use::
+
+    $ MYSQL_CEXT='true' TEST_PATTERN='cext.*' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+You can also enable the **mysqlx** C-EXT by injecting a similar parameter::
+
+    $ MYSQLX_CEXT='true' TEST_PATTERN='conversion' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+Or you can enable the C-EXT for both packages by issuing::
+
+    $ MYSQL_CEXT='true' MYSQLX_CEXT='true' TEST_PATTERN='.*er.*' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+In the examples above, a standard MySQL server configuration is assumed, that's the reason the values for ``MYSQL_HOST``, ``MYSQL_USER``, ``MYSQL_PORT`` or ``MYSQLX_PORT`` weren't specified.
+
+For **Windows** users, you can set up a suitable environment to run bash scripts by installing `Git Bash <https://git-scm.com/>`_, and using the console it provides instead of the natives *PowerShell* or *CMD*.
+
+Similar to when the tests run on a local environment, the ``MYSQL_HOST`` variable is only relevant for the functional tests.
+
+On **Linux**, the variable is optional and the Docker container will run using the "host" network mode whilst tests assume the MySQL server is listening on ``localhost``.
+
+On **macOS** and **Windows**, since containers run on a virtual machine, host loopback addresses are not reachable. In that case, the ``MYSQL_HOST`` variable is required and should specify the hostname or IP address of the MySQL server. Optionally, you can use ``host.docker.internal`` as ``MYSQL_HOST`` if you want to connect to a server hosted locally `[reference] <https://stackoverflow.com/questions/24319662/from-inside-of-a-docker-container-how-do-i-connect-to-the-localhost-of-the-mach>`_.
+
+Due to some `know limitations <https://github.com/docker/for-mac/issues/483>`_ on the macOS Docker architecture, Unix socket tests can only run on Linux. In that case, if the ``MYSQL_SOCKET`` variable is explicitly specified, a shared volume between the host and the container will be created as a mount point from the socket file path in the host and an internal container directory specified as a volume, where the socket file path becomes available.
+
+That being said, the following there are some examples of possible use cases:
+
+* Running the test modules whose name follows the pattern ``c.*`` from a mac whose IP is ``232.188.98.520``, and the password for ``root`` is ``s3cr3t``. Classic and XDevAPI protocols listening on ports ``3306`` and ``33060`` respectively::
+
+    $ TEST_PATTERN='c.*' MYSQL_HOST='192.168.68.111' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+* Running the whole test suite from Linux with MySQL user account ``docker``, and password ``s3cr3t``. Classic and XDevAPI protocols listening on ports ``3308`` and ``33060`` respectively::
+
+    $ MYSQL_PORT='3308' MYSQL_USER='docker' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+* Same setup as before but with the **connector.mysql** C-EXT enabled::
+
+    $ MYSQL_CEXT='true' MYSQL_PORT='3308' MYSQL_USER='docker' MYSQL_PASSWORD='s3cr3t' ./tests/docker/runner.sh
+
+* Running the *bugs* test module from Linux with MySQL user account ``root``, and password ``empty_string``. Classic and XDevAPI protocols listening on ports ``3306`` and ``33070`` respectively::
+
+    $ MYSQLX_PORT='33070' TEST_PATTERN='bugs' ./tests/docker/runner.sh
+
 Test Coverage
 -------------
 
