@@ -1,0 +1,5 @@
+protobuf>=3.11.0,<=3.20.3
+dnspython>=1.16.0,<=2.1.0
+lz4>=2.1.6,<=3.1.3
+zstandard>=0.12.0,<=0.19.0
+gssapi>=1.6.9,<=1.8.2
