@@ -11,6 +11,7 @@ Full release notes:
 v8.0.33
 =======
 
+- WL#15528: Add docker build/test support for existing server
 - WL#15435: Improve the logging system
 - WL#15401: Support for type hints in module mysqlx
 - BUG#30103652: Connector/Python ClientFlag SESION_TRACK is a misspelling
